apps/monitoring/alloy/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alloy-dashboard-https
  namespace: monitoring
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: alloy-dashboard-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alloy.saldivar.io`)
      kind: Rule
      services:
        - name: alloy
          port: http-metrics
      middlewares:
        - name: security
          namespace: kube-system
        - name: traefik-forward-auth
          namespace: kube-system
